css overflow fixed in project section

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ a{
 }
 
 .project-grid-wrapper {
-  display: grid;
+  /* display: grid;
   grid-gap: 0.8rem;
   grid-template-columns: repeat(1, 1fr);
   max-width: 880px;
@@ -126,7 +126,21 @@ a{
   background-color: rgba(34, 36, 37,0.6);
   border-color: rgb(153, 153, 82);
   border-style: solid;
-  border-radius: 10px;
+  border-radius: 10px; */
+
+  display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: flex-start;
+align-content: stretch;
+align-items: flex-start;
+padding: 10px;
+margin-bottom: 20px;
+background-color: rgba(34, 36, 37,0.6);
+border-width: 1px;
+border-style: solid;
+border-color: rgb(153, 153, 82);
+border-radius: 8px;
 }
 
 
